# rust-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
benchmarker/: Cargo.toml
benchmarker/src/: main.rs
meta/: Cargo.toml
meta/derive/: Cargo.toml
meta/derive/src/: helper.rs  impl_dao.rs  impl_rest.rs  lib.rs
meta/src/: lib.rs
meta/trait/: Cargo.toml
meta/trait/src/: lib.rs
migrations/00000000000001_initial_schema/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs
src/database/: entities.rs  mod.rs  schema.rs
tests/: api.rs
